--- a/Vista/Menu.html
+++ b/Vista/Menu.html
@@ -7,7 +7,7 @@ and open the template in the editor.
 <html>
     <head>
         <title>Sistema de Informacion</title>
-        <link  rel="stylesheet" type="text/css" href="css/bootstrap.css">
+        <link  rel="stylesheet" type="text/css" href="../Vista/css/bootstrap.css">
 
     </head>
     <body>
@@ -21,7 +21,7 @@ and open the template in the editor.
                         <span class="icon-bar"></span>
                     </button> 
                     <a href="#" class="navbar-brand" rel="home">
-                        <img style="max-width: 90px; margin-top: -15px;" src="img/logo1.png">
+                        <img style="max-width: 90px; margin-top: -15px;" src="../Vista/img/logo1.png">
                     </a>
                 </div>
 
