--- a/Vista/Principal.html
+++ b/Vista/Principal.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Sistema de Informacion</title>
-        <link  rel="stylesheet" type="text/css" href="css/bootstrap.css">
+        <link  rel="stylesheet" type="text/css" href="../Vista/css/bootstrap.css">
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <!-- This style make bigger the font of the glyphicon-->
         <style>
@@ -21,7 +21,7 @@
     <body>
     <center>
         <div>
-            <img class="i" src="img/logo.jpg" class="" />
+            <img class="i" src="../Vista/img/logo.jpg" class="" />
         </div>
         
         <div  class="c well">
