--- a/Vista/Home.html
+++ b/Vista/Home.html
@@ -7,7 +7,7 @@ and open the template in the editor.
 <html>
     <head>
         <title></title>
-        <link  rel="stylesheet" type="text/css" href="css/bootstrap.css">
+        <link  rel="stylesheet" type="text/css" href="../Vista/css/bootstrap.css">
     </head>
     <body>
         <header>
