--- a/Vista/Header.html
+++ b/Vista/Header.html
@@ -54,3 +54,5 @@
                 </div>
             </div>    
         </div>
+        <script src="../Vista/js/jquery.js"></script>
+        <script src="../Vista/js/bootstrap.js"></script>
