--- a/Vista/Home.html
+++ b/Vista/Home.html
@@ -12,8 +12,8 @@ and open the template in the editor.
     <body>
         <header>
             #header#
-            <script src="js/jquery.js"></script>
-            <script src="js/bootstrap.js"></script>
+            <script src="../Vista/js/jquery.js"></script>
+            <script src="../Vista/js/bootstrap.js"></script>
         </header>
         <section>
             #section#
