--- a/Vista/Menu.html
+++ b/Vista/Menu.html
@@ -21,7 +21,7 @@ and open the template in the editor.
                         <span class="icon-bar"></span>
                     </button> 
                     <a href="#" class="navbar-brand" rel="home">
-                        <img style="max-width: 90px; margin-top: -15px;" src="../Vista/img/logo1.png">
+                        <img alt="El Timbal" style="max-width: 90px; margin-top: -15px;" src="../Vista/img/logo1.png">
                     </a>
                 </div>
 
@@ -31,7 +31,7 @@ and open the template in the editor.
                         <li class="dropdown">
                             <a href="#" class="dropdown-toggle letra2" data-toggle="dropdown">Sucursal<b class="caret"></b></a>
                             <ul class="dropdown-menu">
-                                <li><a href="../public_html/Rsucursal.html" class="letra">Registrar Sucursal</a></li>
+                                <li><a href="" class="letra">Registrar Sucursal</a></li>
                                 <li><a href="#" class="letra">Actualizar Sucursal</a></li>
                             </ul>
                         </li>
@@ -39,7 +39,7 @@ and open the template in the editor.
                         <li class="dropdown">
                             <a href="#" class="dropdown-toggle letra2" data-toggle="dropdown">Cliente<b class="caret"></b></a>
                             <ul class="dropdown-menu">
-                                <li><a href="../public_html/RCliente.html" class="letra">Registrar Cliente</a></li>
+                                <li><a href="" class="letra">Registrar Cliente</a></li>
                                 <li><a href="#" class="letra">Actualizar Cliente</a></li>
                             </ul>
                         </li>
@@ -72,7 +72,7 @@ and open the template in the editor.
         <!--Fin de la Navbar-->
 
 
-        <script src="js/jquery.js"></script>
-        <script src="js/bootstrap.js"></script>
+        <script src="../Vista/js/jquery.js"></script>
+        <script src="../Vista/js/bootstrap.js"></script>
     </body>
 </html>
