--- a/Vista/Header.html
+++ b/Vista/Header.html
@@ -1,58 +1,58 @@
 <div class="navbar navbar-default navbar-fixed-top bg-col ">
-            <div class="container">
-                <div class="navbar-header">
-                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </button> 
-                    <a href="#" class="navbar-brand" rel="home">
-                        <img style="max-width: 90px; margin-top: -15px;" src="img/logo1.png">
-                    </a>
-                </div>
-
-                <div class="navbar-collapse collapse">
-                    <ul class="nav navbar-nav">
-
-                        <li class="dropdown">
-                            <a href="#" class="dropdown-toggle letra2" data-toggle="dropdown">Sucursal<b class="caret"></b></a>
-                            <ul class="dropdown-menu">
-                                <li><a href="../public_html/Rsucursal.html" class="letra">Registrar Sucursal</a></li>
-                                <li><a href="#" class="letra">Actualizar Sucursal</a></li>
-                            </ul>
-                        </li>
-
-                        <li class="dropdown">
-                            <a href="#" class="dropdown-toggle letra2" data-toggle="dropdown">Cliente<b class="caret"></b></a>
-                            <ul class="dropdown-menu">
-                                <li><a href="../public_html/RCliente.html" class="letra">Registrar Cliente</a></li>
-                                <li><a href="#" class="letra">Actualizar Cliente</a></li>
-                            </ul>
-                        </li>
-
-                        <li class="dropdown">
-                            <a href="#" class="dropdown-toggle letra2" data-toggle="dropdown">Proveedor<b class="caret"></b></a>
-                            <ul class="dropdown-menu">
-                                <li><a href="#" class="letra">Registrar Proveedor</a></li>
-                                <li><a href="#" class="letra">Actualizar Proveedor</a></li>
-                            </ul>
-                        </li>
-
-                        <li class="dropdown">
-                            <a href="#" class="dropdown-toggle letra2" data-toggle="dropdown">Empleado<b class="caret"></b></a>
-                            <ul class="dropdown-menu">
-                                <li><a href="#" class="letra">Registrar Empleado</a></li>
-                                <li><a href="#" class="letra">Actualizar Empleado</a></li>
-                                <li><a href="#" class="letra">Deshabilitar Empleado</a></li>
-                            </ul>
-                        </li>
-
-                    </ul>
-
-
-
-                </div>
-            </div>    
+    <div class="container">
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button> 
+            <a href="#" class="navbar-brand" rel="home">
+                <img style="max-width: 90px; margin-top: -15px;" src="../Vista/img/logo1.png">
+            </a>
         </div>
-        <script src="../Vista/js/jquery.js"></script>
-        <script src="../Vista/js/bootstrap.js"></script>
+
+        <div class="navbar-collapse collapse">
+            <ul class="nav navbar-nav">
+
+                <li class="dropdown">
+                    <a href="#" class="dropdown-toggle letra2" data-toggle="dropdown">Sucursal<b class="caret"></b></a>
+                    <ul class="dropdown-menu">
+                        <li><a href="" class="letra">Registrar Sucursal</a></li>
+                        <li><a href="#" class="letra">Actualizar Sucursal</a></li>
+                    </ul>
+                </li>
+
+                <li class="dropdown">
+                    <a href="#" class="dropdown-toggle letra2" data-toggle="dropdown">Cliente<b class="caret"></b></a>
+                    <ul class="dropdown-menu">
+                        <li><a href="" class="letra">Registrar Cliente</a></li>
+                        <li><a href="#" class="letra">Actualizar Cliente</a></li>
+                    </ul>
+                </li>
+
+                <li class="dropdown">
+                    <a href="#" class="dropdown-toggle letra2" data-toggle="dropdown">Proveedor<b class="caret"></b></a>
+                    <ul class="dropdown-menu">
+                        <li><a href="#" class="letra">Registrar Proveedor</a></li>
+                        <li><a href="#" class="letra">Actualizar Proveedor</a></li>
+                    </ul>
+                </li>
+
+                <li class="dropdown">
+                    <a href="#" class="dropdown-toggle letra2" data-toggle="dropdown">Empleado<b class="caret"></b></a>
+                    <ul class="dropdown-menu">
+                        <li><a href="#" class="letra">Registrar Empleado</a></li>
+                        <li><a href="#" class="letra">Actualizar Empleado</a></li>
+                        <li><a href="#" class="letra">Deshabilitar Empleado</a></li>
+                    </ul>
+                </li>
+
+            </ul>
+
+
+
+        </div>
+    </div>   
+</div>
+<script src="../Vista/js/jquery.js"></script>
+    <script src="../Vista/js/bootstrap.js"></script>
