--- a/Vista/Home.html
+++ b/Vista/Home.html
@@ -8,6 +8,11 @@ and open the template in the editor.
     <head>
         <title></title>
         <link  rel="stylesheet" type="text/css" href="../Vista/css/bootstrap.css">
+        <style>
+            .glyphicon{
+                font-size: 1.6em;
+            }
+        </style>
     </head>
     <body>
         <header>
