--- a/Vista/Header.html
+++ b/Vista/Header.html
@@ -50,7 +50,7 @@
 
                 </ul>
                 <ul class="nav navbar-nav  navbar-right">
-                    <li><a href="#">
+                    <li><a href="../Script/ScriptIniciarSesion.php?action=cerrar">
                             <span class="glyphicon glyphicon-off"></span>
                         </a></li>
                 </ul>
