--- a/Vista/Header.html
+++ b/Vista/Header.html
@@ -7,7 +7,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button> 
-                <a href="#" class="navbar-brand" rel="home">
+                <a href="../Script/ScriptIniciarSesion.php?action=home" class="navbar-brand" rel="home">
                     <img style="max-width: 90px; margin-top: -15px;" src="../Vista/img/logo1.png">
                 </a>
             </div>
@@ -18,7 +18,7 @@
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle letra2" data-toggle="dropdown">Sucursal<b class="caret"></b></a>
                         <ul class="dropdown-menu">
-                            <li><a href="" class="letra">Registrar Sucursal</a></li>
+                            <li><a href="#" class="letra">Registrar Sucursal</a></li>
                             <li><a href="#" class="letra">Actualizar Sucursal</a></li>
                         </ul>
                     </li>
@@ -42,7 +42,7 @@
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle letra2" data-toggle="dropdown">Empleado<b class="caret"></b></a>
                         <ul class="dropdown-menu">
-                            <li><a href="#" class="letra">Registrar Empleado</a></li>
+                            <li><a href="../Script/ScriptEmpleado.php?action=registrar" class="letra">Registrar Empleado</a></li>
                             <li><a href="#" class="letra">Actualizar Empleado</a></li>
                             <li><a href="#" class="letra">Deshabilitar Empleado</a></li>
                         </ul>
