--- a/Vista/Header.html
+++ b/Vista/Header.html
@@ -18,7 +18,7 @@
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle letra2" data-toggle="dropdown">Sucursal<b class="caret"></b></a>
                         <ul class="dropdown-menu">
-                            <li><a href="#" class="letra">Registrar Sucursal</a></li>
+                            <li><a href="../Script/ScriptSucursal.php?action=registrar" class="letra">Registrar Sucursal</a></li>
                             <li><a href="#" class="letra">Actualizar Sucursal</a></li>
                         </ul>
                     </li>
@@ -26,7 +26,7 @@
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle letra2" data-toggle="dropdown">Cliente<b class="caret"></b></a>
                         <ul class="dropdown-menu">
-                            <li><a href="" class="letra">Registrar Cliente</a></li>
+                            <li><a href="../Script/ScriptCliente.php?action=registrar" class="letra">Registrar Cliente</a></li>
                             <li><a href="#" class="letra">Actualizar Cliente</a></li>
                         </ul>
                     </li>
@@ -34,7 +34,7 @@
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle letra2" data-toggle="dropdown">Proveedor<b class="caret"></b></a>
                         <ul class="dropdown-menu">
-                            <li><a href="#" class="letra">Registrar Proveedor</a></li>
+                            <li><a href="../Script/ScriptProveedor.php?action=registrar" class="letra">Registrar Proveedor</a></li>
                             <li><a href="#" class="letra">Actualizar Proveedor</a></li>
                         </ul>
                     </li>
