--- a/Vista/Header.html
+++ b/Vista/Header.html
@@ -19,6 +19,7 @@
                         <a href="#" class="dropdown-toggle letra2" data-toggle="dropdown">Sucursal<b class="caret"></b></a>
                         <ul class="dropdown-menu">
                             <li><a href="../Script/ScriptSucursal.php?action=registrar" class="letra">Registrar Sucursal</a></li>
+                            <li><a href="../Script/ScriptSucursal.php?action=consultar" class="letra">Consultar Sucursal</a></li>
                             <li><a href="#" class="letra">Actualizar Sucursal</a></li>
                         </ul>
                     </li>
