--- a/Vista/Seccion/Cliente/RCliente.html
+++ b/Vista/Seccion/Cliente/RCliente.html
@@ -5,7 +5,7 @@
         <h1 class="letra3">Registro de cliente</h1>
     </center>
     <br>
-
+<form action="../Script/ScriptCliente.php" method="post">
     <div class="container">
         <div class="row">
             <div class="col-md-1"></div>
@@ -13,14 +13,32 @@
                 <p class="letra2">Nombre:  
             </div>
             <div class="col-md-3">
-                <input type="text" class="form-control ">
+                <input name="nombre" type="text" class="form-control ">
             </div>
             <div class="col-md-2"></div>
             <div class="col-md-1">
-                <p class="letra2">DNI: 
+                <p class="letra2">Apellido: 
             </div>
             <div class="col-md-3">
-                <input type="text" class="form-control ">
+                <input name="apellido" type="text" class="form-control ">
+            </div>
+            <div class="col-md-1"></div>
+        </div>
+        <br>
+        <div class="row">
+            <div class="col-md-1"></div>
+            <div class="col-md-1">
+                <p class="letra2">Dni:  
+            </div>
+            <div class="col-md-3">
+                <input name="dni" type="text" class="form-control ">
+            </div>
+            <div class="col-md-2"></div>
+            <div class="col-md-1">
+                <p class="letra2">Telefono: 
+            </div>
+            <div class="col-md-3">
+                <input name="telefono" type="text" class="form-control ">
             </div>
             <div class="col-md-1"></div>
         </div>
@@ -31,32 +49,14 @@
                 <p class="letra2">Direccion:  
             </div>
             <div class="col-md-3">
-                <input type="text" class="form-control ">
-            </div>
-            <div class="col-md-2"></div>
-            <div class="col-md-1">
-                <p class="letra2">Telefono: 
-            </div>
-            <div class="col-md-3">
-                <input type="text" class="form-control ">
-            </div>
-            <div class="col-md-1"></div>
-        </div>
-        <br>
-        <div class="row">
-            <div class="col-md-1"></div>
-            <div class="col-md-1">
-                <p class="letra2">Celular:  
-            </div>
-            <div class="col-md-3">
-                <input type="text" class="form-control ">
+                <input name="direccion" type="text" class="form-control ">
             </div>
             <div class="col-md-2"></div>
             <div class="col-md-1">
                 <p class="letra2">E-mail: 
             </div>
             <div class="col-md-3">
-                <input type="text" class="form-control ">
+                <input name="email" type="text" class="form-control ">
             </div>
             <div class="col-md-1"></div>
         </div>
@@ -65,15 +65,15 @@
         <div class="row">
             <div class="col-md-4"></div>
             <div class="col-md-2">
-                <a class="btn btn-success btn-lg letra">Registrar
-                </a>
+                <button name="enviar" type="submit" class="btn btn-success btn-lg letra">Registrar
+                </button>
             </div>
             <div class="col-md-2">
-                <a href="../public_html/Menu.html" class="btn btn-primary btn-lg letra">Cancelar
+                <a href="../Script/ScriptIniciarSesion.php?action=home" class="btn btn-primary btn-lg letra">Cancelar
                 </a>
             </div>
             <div class="col-md-4"></div>
 
         </div>
     </div>
-
+</form>
