--- a/Vista/Seccion/Sucursal/RSucursal.html
+++ b/Vista/Seccion/Sucursal/RSucursal.html
@@ -5,7 +5,7 @@
         <h1 class="letra3">Registro de sucursal</h1>
     </center>
     <br>
-
+<form action="../Script/ScriptSucursal.php" method="post">
     <div class="container">
         <div class="row">
             <div class="col-md-1"></div>
@@ -13,14 +13,14 @@
                 <p class="letra2">Codigo:  
             </div>
             <div class="col-md-3">
-                <input type="text" class="form-control ">
+                <input name="codigo" type="text" class="form-control ">
             </div>
             <div class="col-md-2"></div>
             <div class="col-md-1">
                 <p class="letra2">Nombre: 
             </div>
             <div class="col-md-3">
-                <input type="text" class="form-control ">
+                <input name="nombre" type="text" class="form-control ">
             </div>
             <div class="col-md-1"></div>
         </div>
@@ -31,14 +31,50 @@
                 <p class="letra2">Telefono:  
             </div>
             <div class="col-md-3">
-                <input type="text" class="form-control ">
+                <input name="telefono" type="text" class="form-control ">
             </div>
             <div class="col-md-2"></div>
             <div class="col-md-1">
-                <p class="letra2">Celular: 
+                <p class="letra2">E-mail: 
             </div>
             <div class="col-md-3">
-                <input type="text" class="form-control ">
+                <input name="email" type="text" class="form-control ">
+            </div>
+            <div class="col-md-1"></div>
+        </div>
+        <br>
+        <div class="row">
+            <div class="col-md-1"></div>
+            <div class="col-md-1">
+                <p class="letra2">Pagina web:  
+            </div>
+            <div class="col-md-3">
+                <input name="pagina" type="text" class="form-control ">
+            </div>
+            <div class="col-md-2"></div>
+            <div class="col-md-1">
+                <p class="letra2">Direccion: 
+            </div>
+            <div class="col-md-3">
+                <input name="direccion" type="text" class="form-control ">
+            </div>
+            <div class="col-md-1"></div>
+        </div>
+        <br>
+        <div class="row">
+            <div class="col-md-1"></div>
+            <div class="col-md-1">
+                <p class="letra2">Ciudad:  
+            </div>
+            <div class="col-md-3">
+                <input name="ciudad" type="text" class="form-control ">
+            </div>
+            <div class="col-md-2"></div>
+            <div class="col-md-1">
+                <p class="letra2">Pais: 
+            </div>
+            <div class="col-md-3">
+                <input name="pais" type="text" class="form-control ">
             </div>
             <div class="col-md-1"></div>
         </div>
@@ -47,16 +83,16 @@
         <div class="row">
             <div class="col-md-4"></div>
             <div class="col-md-2">
-                <a class="btn btn-success btn-lg letra">Registrar
-                </a>
+                <button name="enviar" type="submit" class="btn btn-success btn-lg letra">Registrar
+                </button>
             </div>
             <div class="col-md-2">
-                <a href="../public_html/Menu.html" class="btn btn-primary btn-lg letra">Cancelar
+                <a href="../Script/ScriptIniciarSesion.php?action=home" class="btn btn-primary btn-lg letra">Cancelar
                 </a>
             </div>
             <div class="col-md-4"></div>
 
         </div>
     </div>
-
+</form>
 
