--- a/Vista/Header.html
+++ b/Vista/Header.html
@@ -20,7 +20,7 @@
                         <ul class="dropdown-menu">
                             <li><a href="../Script/ScriptSucursal.php?action=registrar" class="letra">Registrar Sucursal</a></li>
                             <li><a href="../Script/ScriptSucursal.php?action=consultar" class="letra">Consultar Sucursal</a></li>
-                            <li><a href="#" class="letra">Actualizar Sucursal</a></li>
+                            <li><a href="../Script/ScriptSucursal.php?action=actualizar" class="letra">Actualizar Sucursal</a></li>
                         </ul>
                     </li>
 
@@ -28,7 +28,8 @@
                         <a href="#" class="dropdown-toggle letra2" data-toggle="dropdown">Cliente<b class="caret"></b></a>
                         <ul class="dropdown-menu">
                             <li><a href="../Script/ScriptCliente.php?action=registrar" class="letra">Registrar Cliente</a></li>
-                            <li><a href="#" class="letra">Actualizar Cliente</a></li>
+                            <li><a href="../Script/ScriptCliente.php?action=consultar" class="letra">Consultar Cliente</a></li>
+                            <li><a href="../Script/ScriptCliente.php?action=actualizar" class="letra">Actualizar Cliente</a></li>
                         </ul>
                     </li>
 
@@ -36,6 +37,7 @@
                         <a href="#" class="dropdown-toggle letra2" data-toggle="dropdown">Proveedor<b class="caret"></b></a>
                         <ul class="dropdown-menu">
                             <li><a href="../Script/ScriptProveedor.php?action=registrar" class="letra">Registrar Proveedor</a></li>
+                            <li><a href="../Script/ScriptProveedor.php?action=consultar" class="letra">Consultar Proveedor</a></li>
                             <li><a href="#" class="letra">Actualizar Proveedor</a></li>
                         </ul>
                     </li>
@@ -44,15 +46,15 @@
                         <a href="#" class="dropdown-toggle letra2" data-toggle="dropdown">Empleado<b class="caret"></b></a>
                         <ul class="dropdown-menu">
                             <li><a href="../Script/ScriptEmpleado.php?action=registrar" class="letra">Registrar Empleado</a></li>
+                            <li><a href="../Script/ScriptEmpleado.php?action=consultar" class="letra">Consultar Empleado</a></li>
                             <li><a href="#" class="letra">Actualizar Empleado</a></li>
-                            <li><a href="#" class="letra">Deshabilitar Empleado</a></li>
                         </ul>
                     </li>
 
                 </ul>
                 <ul class="nav navbar-nav  navbar-right">
                     <li><a href="../Script/ScriptIniciarSesion.php?action=cerrar">
-                            <span class="glyphicon glyphicon-off"></span>
+                            <span class="glyphicon glyphicone glyphicon-off"></span>
                         </a></li>
                 </ul>
             </div>
