--- a/Vista/Home.html
+++ b/Vista/Home.html
@@ -9,8 +9,11 @@ and open the template in the editor.
         <title></title>
         <link  rel="stylesheet" type="text/css" href="../Vista/css/bootstrap.css">
         <style>
-            .glyphicon{
+            .glyphicone{
                 font-size: 1.6em;
+            }
+            .glyphicons{
+                font-size: 1.2em;
             }
         </style>
     </head>
